starship disale for nodejs

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -441,7 +441,7 @@ format = 'via [$symbol($version )]($style)'
 version_format = 'v${raw}'
 symbol = ' '
 style = 'bold green'
-disabled = false
+disabled = true
 not_capable_style = 'bold red'
 detect_extensions = [
     'js',
