--- a/.tigrc
+++ b/.tigrc
@@ -3,4 +3,6 @@ bind branch L @git pull origin %(branch)
 bind branch P ?git push origin %(branch)
 bind branch F @git flow feature start "%(prompt Enter branch name: )"
 bind branch H @git flow hotfix start "%(prompt Enter branch name: )"
+bind stash S ?git stash push "%(prompt Enter stash comment: )"
+bind stash U ?git stash push -u "%(prompt Enter stash comment: )"
 bind status C !git cz
