--- a/.tigrc
+++ b/.tigrc
@@ -1,8 +1,10 @@
 #Bind Settings
+bind branch B !git checkout -b feature/"%(prompt Enter branch name: )"
+bind branch H !git checkout -b hotfix/"%(prompt Enter branch name: )"
 bind branch P !?git push origin %(branch)
 bind branch L !git pull origin %(branch)
-bind branch F @git flow feature start "%(prompt Enter branch name: )"
-bind branch H @git flow hotfix start "%(prompt Enter branch name: )"
+bind branch M ?git pull origin master
+bind branch F @git flow feature start "%(prompt Enter branch name: )"#"%(prompt Enter issue no: )"
 bind stash S ?git stash push "%(prompt Enter stash comment: )"
 bind stash U ?git stash push -u "%(prompt Enter stash comment: )"
 bind status C !git cz
