--- a/.tigrc
+++ b/.tigrc
@@ -1,6 +1,6 @@
 #Bind Settings
-bind branch B !git checkout -b feature/"%(prompt Enter branch name: )"
-bind branch H !git checkout -b hotfix/"%(prompt Enter branch name: )"
+bind branch B @git checkout -b feature/"%(prompt Enter branch name: )"
+bind branch H @git checkout -b hotfix/"%(prompt Enter branch name: )"
 bind branch P !?git push origin %(branch)
 bind branch L !git pull origin %(branch)
 bind branch M ?git pull origin master
