--- a/.tigrc
+++ b/.tigrc
@@ -4,7 +4,7 @@ bind branch H @git checkout -b hotfix/"%(prompt Enter branch name: )"
 bind branch P !?git push origin %(branch)
 bind branch L !git pull origin %(branch)
 bind branch M ?git pull origin master
-bind branch F @git flow feature start "%(prompt Enter branch name: )"#"%(prompt Enter issue no: )"
+bind branch F @git flow feature start "%(prompt Enter branch name: )"
 bind stash S ?git stash save "%(prompt Enter stash comment: )"
 bind stash U ?git stash save -u "%(prompt Enter stash comment: )"
 bind status C !git cz
