--- a/.tigrc
+++ b/.tigrc
@@ -9,6 +9,6 @@ bind stash S ?git stash save "%(prompt Enter stash comment: )"
 bind stash U ?git stash save -u "%(prompt Enter stash comment: )"
 bind status C >git cz
 bind status A @git add .
-bind generic D >git difftool --tool=vimdiff --no-prompt
+bind generic D !git difftool --tool=vimdiff --no-prompt
 
 
