--- a/.tigrc
+++ b/.tigrc
@@ -10,5 +10,6 @@ bind stash U ?git stash save -u "%(prompt Enter stash comment: )"
 bind status C >git cz
 bind status A @git add .
 bind generic D !git difftool --tool=vimdiff --no-prompt
+bind generic M !git mergetool --tool=vimdiff --no-prompt
 
 
